--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.503.0",
     "next-themes": "^0.4.6",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
