updated the user_id

--- a/Backend/.env
+++ b/Backend/.env
@@ -9,3 +9,5 @@ JWT_SECRET_KEY=ePJVSkFfl2lyn7hZtfLSmUbI1Lj4kxqUiwdlUw-UwCM
 # or explicitly define them if you want to override the defaults from settings.py
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+OLLAMA_MODEL=mistral
+
