--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -10,4 +10,7 @@ python-jose[cryptography]
 python-multipart
 kafka-python==2.0.2
 websockets==12.0
+langchain==0.1.0
+langchain-core==0.1.10
+langchain-community==0.0.13
 
